--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -1,19 +1,65 @@
 server {
-	listen 0.0.0.0:80;
-	index  index.php index.html;
-	root   /srv;
+    listen 80;
 
-	location / {
-		try_files $uri $uri/ /index.php?$query_string;
-	}
+    location = / {
+        return 301 $scheme://$http_host/utilitario/;
+    }
 
-	location ~ \.php$ {
-		include       fastcgi_params;
+    location = /favicon.ico {
+        alias /srv/favicon.ico;
+    }
 
-		fastcgi_pass  php:9000;
-		fastcgi_index index.php;
+    location ~ ^/utilitario/.*\.php$ {
+        root /srv;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+    }
 
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param REQUEST_URI     $request_uri;
-	}
+    location /utilitario/ {
+        root /srv;
+        index index.php;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ ^/loja/.*\.php$ {
+        root /srv;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+    }
+
+    location /loja/ {
+        root /srv;
+        index index.php;
+        try_files $uri $uri/ =404;
+    }
+
+    location ~ ^/adm/.*\.php$ {
+        root /srv;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        include fastcgi_params;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+    }
+
+    location /adm/ {
+        root /srv;
+        index index.php;
+        try_files $uri $uri/ =404;
+    }
+
+    location /imagens {
+        alias /srv/imagens;
+    }
+
+    location /bootstrap {
+        alias /srv/bootstrap;
+    }
+
+    location ~ /\. {
+        deny all;
+    }
 }
